--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {
 }
 
 header {
-  margin-top: 4rem;
+  margin-top: 1rem;
 }
 
 footer {
@@ -46,7 +46,7 @@ body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  height: 100vh;
+  /*height: 100vh;*/
 }
 
 /* Container for image and headline */
